<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one"
            app:layout_row="0"
            app:layout_column="0"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:onClick="buttonTapped"/>

        <Button
            android:id="@+id/two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two"
            app:layout_row="0"
            app:layout_column="1"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:onClick="buttonTapped"/>

        <Button
            android:id="@+id/three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three"
            app:layout_row="1"
            app:layout_column="0"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:onClick="buttonTapped"/>

        <Button
            android:id="@+id/four"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four"
            app:layout_row="1"
            app:layout_column="1"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:onClick="buttonTapped"/>

        <Button
            android:id="@+id/five"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five"
            app:layout_row="2"
            app:layout_column="0"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:onClick="buttonTapped"/>

        <Button
            android:id="@+id/six"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six"
            app:layout_row="2"
            app:layout_column="1"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:onClick="buttonTapped"/>

        <Button
            android:id="@+id/seven"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seven"
            app:layout_row="3"
            app:layout_column="0"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:onClick="buttonTapped"/>

        <Button
            android:id="@+id/eight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eight"
            app:layout_row="3"
            app:layout_column="1"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:onClick="buttonTapped"/>

        <Button
            android:id="@+id/nine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nine"
            app:layout_row="4"
            app:layout_column="0"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:onClick="buttonTapped"/>

        <Button
            android:id="@+id/ten"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten"
            app:layout_row="4"
            app:layout_column="1"
            app:layout_rowWeight="1"
            app:layout_columnWeight="1"
            android:onClick="buttonTapped"/>


    </android.support.v7.widget.GridLayout>
</android.support.constraint.ConstraintLayout>